# compio

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: fs.rs  named_pipe.rs  net.rs
examples/: basic.rs  driver.rs  named_pipe.rs  net.rs  tick.rs  unix.rs
src/: attacher.rs  lib.rs  named_pipe.rs  op.rs  time.rs
src/buf/: io_buf.rs  mod.rs  slice.rs
src/driver/: mod.rs  time.rs
src/driver/iocp/: mod.rs  op.rs
src/driver/iour/: mod.rs  op.rs
src/driver/kqueue/: mod.rs  op.rs
src/driver/mio/: mod.rs  op.rs
src/driver/unix/: mod.rs  op.rs
src/event/: eventfd.rs  iocp.rs  pipe.rs
src/fs/: file.rs  open_options.rs
src/net/: socket.rs  tcp.rs  udp.rs  unix.rs
src/signal/: mod.rs  unix.rs  windows.rs
src/task/: mod.rs  op.rs  runtime.rs  time.rs
tests/: driver.rs  event.rs  file.rs  runtime.rs  tcp_accept.rs  tcp_connect.rs  udp.rs  unix_stream.rs
